@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-<<<<<<< .working
 	<name>Controller_Pro1.4.0</name>
 	<comment></comment>
 	<projects>
